fdo#38542: sw: ODF import: divide width by 3 for "double" borders

The problem is that the width from the fo:border{,-left,-right,-top,-bottom}
attributes is effectively tripled for "double" borders.

Signed-off-by: Cédric Bosdonnat <cedric.bosdonnat.ooo@free.fr>
(cherry picked from commit 7cda0a56bf3f9d09740871d85f0557cf0b4a7a76)

Signed-off-by: Caolán McNamara <caolanm@redhat.com>